style: solved swiper cards overflow

--- a/src/components/pages/Home/sections/Gameplay/styles.module.css
+++ b/src/components/pages/Home/sections/Gameplay/styles.module.css
@@ -100,6 +100,10 @@
   user-select: none;
 }
 
+.featMedia:has(.swiper) {
+  overflow: hidden;
+}
+
 /* Extra small devices */
 @media (min-width: 320px) {
 }
